--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>csopi1</title>
-</head>
-<body>
-    <h1>ahahaha</h1>
-    <h2>szobi   nem bir magaval </h2>
-    aha
-    <h2>nem akarok torit irni</h2>
-    <h3>peter nem bir magaval</h3>
-</body>
+  </head>
+  <body>
+  <div class="tarolo">
+    <div class="tartalom">
+      <div class="JAmol">
+<h1>zello en JAmol</h1>
+      </div>
+      <div class="Zsombeh"> 
+<h1>jello en Zsombeh</h1>
+      </div>
+    </div>
+  </div>
+  <p>nagyon jo.</p>
+  </body>
 </html>
